syntax = "proto3";
package ibc.core.wasm.v1;

import "gogoproto/gogo.proto";

option go_package = "github.com/cosmos/ibc-go/modules/core/28-wasm/types";

// Msg defines the ibc/wasm Msg service.
service Msg {
  // PushNewWASMCode defines a rpc handler method for PushNewWASMCode.
  rpc PushNewWASMCode(MsgPushNewWASMCode) returns (MsgPushNewWASMCodeResponse);
}

// Message type to push new wasm code
message MsgPushNewWASMCode {
  string signer      = 1;
  bytes  code        = 3;
}

// Response in case of successful handling
message MsgPushNewWASMCodeResponse {
  bytes  code_id   = 1;
}
